2022-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.30

	* src/crc32.c: Modernize three function signatures to current C
	standards to appease clang-15 now used by CRAN

	* src/sha2.c (SHA512_End): Align two function signatures to their
	prototypes to appease gcc-12

2022-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/src/index.md: Several small updates with upgrade to
	Material for MkDocs 8.5.5

2021-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.29

	* src/digest.c (digest): Accomodate Windows UCRT build
	* man/AES.Rd: Remove one URL that upsets the URL checker
	* README.md: Update one URL that upsets the URL checker

2021-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/sha1.md: Renamed from .Rmd, corrected code block syntax

2021-11-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (VignetteBuilder): Converted to simplermarkdown engine
	* vignettes/sha1.Rmd: Idem
	* vignettes/water.css: Added

2021-11-05  Dirk Eddelbuettel  <edd@debian.org>

 	* README.md: Remove Travis badge
	* .travis.yml: Remove Travis YAML config

2021-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.28

2021-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/sha1.Rmd (date): Remove knitr date calculation in YAML
	header which GitHub does not like and mistakes for Jekyll code
	* docs/mkdmt-src/src/vignette.md (date): Idem

	* README.md: Add total download badge, label other as monthly

2021-09-22  András Svraka  <svraka.andras@gmail.com>

	* R/vdigest.R (non_streaming_digest): Ensure UTF-8 encoded file paths
	on Windows
	* inst/tinytest/test_encoding.R: Expand test coverage for path name
	encodings on Windows

2021-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/: Moved mkdocs-material input
